--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2761
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Anniversary, Love 💕</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Happy Anniversary, My Love! ❤️</h1>
+    <p>To the most amazing boyfriend in the world.</p>
+    <img src="us-photo.jpg" alt="Us" class="photo">
+    <p>Every day with you is a beautiful chapter in my life. Here's to many more to come. 💑</p>
+    
+    <!-- Placeholder for additional text or image -->
+    <div class="additional-content">
+      <p>Here’s a special message just for you! 💌</p>
+      <!-- You can replace the src with the path to your new image if desired -->
+      <img src="special-image.jpg" alt="Special Moment" class="additional-photo"> 
+    </div>
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-  <meta charset="UTF-8">\
-  <title>Happy Anniversary, Love \uc0\u55357 \u56469 </title>\
-  <link rel="stylesheet" href="style.css">\
-</head>\
-<body>\
-  <div class="container">\
-    <h1>Happy Anniversary, My Love! \uc0\u10084 \u65039 </h1>\
-    <p>To the most amazing boyfriend in the world.</p>\
-    <img src="us-photo.jpg" alt="Us" class="photo">\
-    <p>Every day with you is a beautiful chapter in my life. Here's to many more to come. \uc0\u55357 \u56465 </p>\
-    <audio controls>\
-      <source src="our-song.mp3" type="audio/mp3">\
-      Your browser does not support the audio element.\
-    </audio>\
-    <footer>With all my love, always. \uc0\u55357 \u56459 </footer>\
-  </div>\
-</body>\
-</html>\
-\
-}
+    <footer>With all my love, always. 💋</footer>
+  </div>
+</body>
+</html>
