--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Happy Anniversary, My Love! ❤️</h1>
-    <p>To the most amazing boyfriend in the world.</p>
-    <img src="us-photo.jpg" alt="Us" class="photo">
-    <p>Every day with you is a beautiful chapter in my life. Here's to many more to come. 💑</p>
-    
-    <!-- Placeholder for additional text or image -->
-    <div class="additional-content">
-      <p>Here’s a special message just for you! 💌</p>
-      <!-- You can replace the src with the path to your new image if desired -->
-      <img src="special-image.jpg" alt="Special Moment" class="additional-photo"> 
-    </div>
+  <div class="outer-container">
+    <div class="container">
+      <h1>Happy Anniversary, My Love! ❤️</h1>
+      <p>To the most amazing boyfriend in the world.</p>
+      <img src="us-photo.jpg" alt="Us" class="photo">
+      <p>Every day with you is a beautiful chapter in my life. Here's to many more to come. 💑</p>
+      
+      <!-- Placeholder for additional text or image -->
+      <div class="additional-content">
+        <p>Here’s a special message just for you! 💌</p>
+        <!-- You can replace the src with the path to your new image if desired -->
+        <img src="special-image.jpg" alt="Special Moment" class="additional-photo"> 
+      </div>
 
-    <footer>With all my love, always. 💋</footer>
+      <footer>With all my love, always. 💋</footer>
+    </div>
   </div>
 </body>
 </html>
