--- a/index.html
+++ b/index.html
@@ -1,22 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Happy Anniversary 💖</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #ffe6f2;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      background-color: #d0f0ff;
+      border: 10px solid #ff1493;
+      border-radius: 25px;
+      padding: 40px;
+      text-align: center;
+      max-width: 700px;
+      width: 90%;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #ff1493;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #444;
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    .photo {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 20px;
+      margin: 20px 0;
+      border: 4px solid #ff1493;
+    }
+
+    audio {
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    footer {
+      margin-top: 30px;
+      color: #cc3366;
+      font-size: 16px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Happy Anniversary, Vashist 💕</h1>
     <p>You mean the world to me, and I’m so lucky to have you in my life.</p>
 
-    <img src="us-photo.jpg" alt="Us Together" class="photo">
+    <img src="us-photo.jpg" alt="Us Together" class="photo" />
 
     <p>From the start until now, you've been the best part of my every day. I love you so much. 💖</p>
 
     <audio controls>
-      <source src="our-song.mp3" type="audio/mp3">
+      <source src="our-song.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
 
